--- a/chits/Chit_Picker.ipynb
+++ b/chits/Chit_Picker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "78e47efc",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5c6f5a44",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "id": "71b99e22",
    "metadata": {},
    "outputs": [
@@ -117,19 +117,19 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Thomas Lawless</td>\n",
+       "      <th>6</th>\n",
+       "      <td>Joby Augustine</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              Name\n",
-       "19  Thomas Lawless"
+       "             Name\n",
+       "6  Joby Augustine"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,30 +141,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "decdd425",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Kelechi Nwachukwu',\n",
+       " 'Alexander Lorin',\n",
+       " 'Arnold Wamulanga',\n",
+       " 'Corey Chickowski',\n",
+       " 'Ellis Purwanto',\n",
+       " 'Erica Prickett',\n",
+       " 'Joby Augustine',\n",
+       " 'Karla Robles',\n",
+       " 'Marc Avoaka',\n",
+       " 'Nazih Bouanani',\n",
+       " 'Prajesh Patel',\n",
+       " 'Prince Emenalo',\n",
+       " 'Ra Ish Andrews',\n",
+       " 'Rajeshwari Natchiappan',\n",
+       " 'Rudy Duvnjak',\n",
+       " 'Ryan Hulett',\n",
+       " 'Shailesh Godkhindi',\n",
+       " 'Shreya Udeshi',\n",
+       " 'Stormm Van Rooi',\n",
+       " 'Thomas Lawless']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "name_pick_df['Name'].tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cbdd0a85",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "82f664df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Alexander Lorin',\n",
+       " 'Arnold Wamulanga',\n",
+       " 'Corey Chickowski',\n",
+       " 'Ellis Purwanto',\n",
+       " 'Erica Prickett',\n",
+       " 'Joby Augustine',\n",
+       " 'Karla Robles',\n",
+       " 'Kelechi Nwachukwu',\n",
+       " 'Marc Avoaka',\n",
+       " 'Nazih Bouanani',\n",
+       " 'Prajesh Patel',\n",
+       " 'Prince Emenalo',\n",
+       " 'Ra Ish Andrews',\n",
+       " 'Rajeshwari Natchiappan',\n",
+       " 'Rudy Duvnjak',\n",
+       " 'Ryan Hulett',\n",
+       " 'Shailesh Godkhindi',\n",
+       " 'Shreya Udeshi',\n",
+       " 'Stormm Van Rooi',\n",
+       " 'Thomas Lawless'}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "selection = set(name_pick_df['Name'].tolist())\n"
+    "name_selection = set(name_pick_df['Name'].tolist())\n",
+    "name_selection"
    ]
   },
   {
@@ -173,13 +226,11 @@
    "id": "f9c8d2d1",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#selection.iloc[0,0]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "5742e816",
    "metadata": {},
    "outputs": [],
@@ -189,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "id": "5ae12d12",
    "metadata": {},
    "outputs": [],
@@ -204,23 +255,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "id": "05f0eac1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Shailesh Godkhindi': 1,\n",
-       " 'Rudy Duvnjak': 2,\n",
-       " 'Stormm Van Rooi': 1,\n",
-       " 'Thomas Lawless': 2,\n",
-       " 'Joby Augustine': 1,\n",
-       " 'Kelechi Nwachukwu': 1,\n",
-       " 'Marc Avoaka': 1}"
+       "{'Prajesh Patel': 1,\n",
+       " 'Alexander Lorin': 1,\n",
+       " 'Joby Augustine': 2,\n",
+       " 'Nazih Bouanani': 2,\n",
+       " 'Ra Ish Andrews': 1,\n",
+       " 'Ellis Purwanto': 1}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,10 +281,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "1e0689fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Prajesh Patel', 'Alexander Lorin', 'Joby Augustine'])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "name_dict.keys()"
    ]
